...
            <RelativeLayout
                android:id="@+id/emptyLinearHighscoreKitchen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/bCreateNewKitchen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:padding="1dp"
...
