...
                        android:layout_weight="1"
                        android:textSize="18dp"
                        android:textColor="@color/black"
                        android:text="@string/WGBs" />

                    <EditText
                        android:id="@+id/edWGBS"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Null"
                        android:inputType="textMultiLine"
                        android:lines="3"
...
